2008-02-29  Mike Kestner  <mkestner@novell.com>

	* generator/ReturnValue.cs: null-term array handling.
	* glib/Marshaller.cs: marshaling methods for null-term arrays.

2008-02-29  Mike Kestner  <mkestner@novell.com>

	* sample/Action.cs: qualify Action usage.
	* sample/GtkDemo/DemoApplicationWindow.cs: qualify Action usage.
	* sample/GtkDemo/DemoUIManager.cs: qualify Action usage.

2008-02-29  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: atk checks and SUBSTs.
	* atk/Util.custom: custom properties for overriding class methods.
	* atk/glue/util.c: glue to override class methods.

2008-02-26  Mike Kestner  <mkestner@novell.com>

	* generator/ByRefGen.cs: fix mismatched alloc/free.

2008-02-22  Mike Kestner  <mkestner@novell.com>

	* gdk/Pixbuf.custom: add destroy notification and pin byte[] to
	avoid GC complications.  Add a couple new convenience ctors as
	well. [Fixes #362951]

2008-02-21  Mike Kestner  <mkestner@novell.com>

	* glib/Source.cs: rework proxy removal to avoid boxing profile.
	* glib/Idle.cs: save src_id in proxy to facilitate removal.
	* glib/Timeout.cs: save src_id in proxy to facilitate removal.
	[Fixes #359561]

2008-02-07  Mike Kestner  <mkestner@novell.com>

	* generator/ReturnValue.cs: null term array marshaling.
	* glib/Marshaller.cs: new marshalers for null-terminated string 
	arrays. [Fixes #342113]

2008-02-07  Mike Kestner  <mkestner@novell.com>

	* generator/Parameters.cs: fix off-by-1 in null term array marshaling.

2008-02-06  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata: mark ApplyEmbeddedOrientation return as owned.

2008-01-30  Mike Kestner  <mkestner@novell.com>

	* generator/ClassBase.cs: null check ifaces in recursive method
	and signal lookup.

2008-01-29  Mike Kestner  <mkestner@novell.com>

	* generator/ManagedCallString (Setup): use error param name instead
	of hardcoding error.

2008-01-29  Mike Kestner  <mkestner@novell.com>

	* generator/VirtualMethod (CName): mangle the name.