@@ -1,5 +1,10 @@
 2008-02-29  Mike Kestner  <mkestner@novell.com>
 
+	* gdk/Event.cs: add New method for consistency with generated
+	boxed types.  Will be used by GLib.Value in the future.
+
+2008-02-29  Mike Kestner  <mkestner@novell.com>
+
 	* generator/ReturnValue.cs: null-term array handling.
 	* glib/Marshaller.cs: marshaling methods for null-term arrays.
 
